--- a/lib/cpp/3rdparty.props
+++ b/lib/cpp/3rdparty.props
@@ -2,9 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <BOOST_ROOT>$(THIRD_PARTY)\boost\boost_1_47_0</BOOST_ROOT>
-    <OPENSSL_ROOT_DIR>$(THIRD_PARTY)\openssl\OpenSSL-Win32</OPENSSL_ROOT_DIR>
-    <LIBEVENT_ROOT>$(THIRD_PARTY)\libevent-2.0.21-stable</LIBEVENT_ROOT>
+    <BOOST_ROOT>C:\boost-1.76.0</BOOST_ROOT>
+    <OPENSSL64_ROOT_DIR>C:\openssl-1.1.1k\win64</OPENSSL64_ROOT_DIR>
+    <OPENSSL32_ROOT_DIR>C:\openssl-1.1.1k\win32</OPENSSL32_ROOT_DIR>
+    <LIBEVENT_ROOT>C:\libevent-2.0.21</LIBEVENT_ROOT>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
@@ -13,8 +14,12 @@
       <Value>$(BOOST_ROOT)</Value>
       <EnvironmentVariable>true</EnvironmentVariable>
     </BuildMacro>
-    <BuildMacro Include="OPENSSL_ROOT_DIR">
-      <Value>$(OPENSSL_ROOT_DIR)</Value>
+    <BuildMacro Include="OPENSSL64_ROOT_DIR">
+      <Value>$(OPENSSL64_ROOT_DIR)</Value>
+      <EnvironmentVariable>true</EnvironmentVariable>
+    </BuildMacro>
+    <BuildMacro Include="OPENSSL32_ROOT_DIR">
+      <Value>$(OPENSSL32_ROOT_DIR)</Value>
       <EnvironmentVariable>true</EnvironmentVariable>
     </BuildMacro>
     <BuildMacro Include="LIBEVENT_ROOT">
